Merge branch 'dev' https://github.com/PandaCare-A14/main-app into doctor-profile